--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </button> -->
             <div class="mock">
                 <h1>
-                    Become A 2X Data Scientist in the half the time
+                    Become A 2X Data Scientist in the half the time!
                 </h1>
                 <p>
                     Join 2021 Data Science Boot Camp
