--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section id="landing">
             <h1>
-                |Talented.Driven.Enterprising|
+                Talented.Driven.Enterprising
             </h1>
             <p>
                 The power of AI applied to your organisation
