--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DSEA || All Round Data Science</title>
     <!-- LINKS -->
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -49,10 +50,18 @@
                 Launch Your Career now!
             </h2>
             <article>
-                <div class="career">
+                <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="career"
+                >
                     <h3>Data Scientist</h3>
                 </div>
-                <div class="career">
+                <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="career"
+                >
                     <h3>Machine Learning Engineer</h3>
                 </div>
             </article>
@@ -110,13 +119,48 @@
             <div class="paths">
                 <h2>Learning paths and technologies</h2>
                 <div>
-                    <div class="path">
+                    <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="path"
+                >
+
                     </div>
-                    <div class="path"></div>
-                    <div class="path"></div>
-                    <div class="path"></div>
-                    <div class="path"></div>
-                    <div class="path"></div>
+                    <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="path"
+                >
+
+                    </div>
+                    <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="path"
+                >
+
+                    </div>
+                    <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="path"
+                >
+
+                    </div>
+                    <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="path"
+                >
+
+                    </div>
+                    <div 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                    class="path"
+                >
+
+                    </div>
                 </div>
             </div>
         </section>
@@ -164,5 +208,11 @@
         </p>
     </footer>
     
+
+    <!-- Scripts -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
