--- a/index.html
+++ b/index.html
@@ -106,13 +106,22 @@
                 View all courses
             </button> -->
             <div class="mock">
-                <h1>
+                <h1
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                >
                     Become A 2X Data Scientist in the half the time!
                 </h1>
-                <p>
+                <p
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                >
                     Join 2021 Data Science Boot Camp
                 </p>
-                <button>
+                <button 
+                    data-aos="fade-up"
+                    data-aos-duration="600"
+                >
                     Apply Now
                 </button>
             </div>
@@ -170,7 +179,7 @@
             <h2>
                 Data Science East Africa
             </h2>
-            <p>
+            <p style="margin-bottom: .3rem;">
                 We are a multidisciplinary team.
             </p>
             <p>
