--- a/index.html
+++ b/index.html
@@ -132,43 +132,61 @@
                     data-aos="fade-up"
                     data-aos-duration="600"
                     class="path"
-                >
-
+                    >
+                        <div class="path-icon">
+                            <img src="https://img.icons8.com/ios-filled/50/000000/python.png"/>
+                            <h3>Python</h3>
+                        </div>
                     </div>
                     <div 
                     data-aos="fade-up"
                     data-aos-duration="600"
                     class="path"
-                >
-
+                    >
+                        <div class="path-icon">
+                            <img src="https://img.icons8.com/ios/50/000000/circled-r.png"/>
+                            <h3>R</h3>
+                        </div>
                     </div>
                     <div 
                     data-aos="fade-up"
                     data-aos-duration="600"
                     class="path"
-                >
-
+                    >
+                        <div class="path-icon">
+                            <img src="https://img.icons8.com/ios-filled/50/000000/database.png"/>
+                            <h3>SQL</h3>
+                        </div>
                     </div>
                     <div 
                     data-aos="fade-up"
                     data-aos-duration="600"
                     class="path"
-                >
-
+                    >
+                        <div class="path-icon">
+                            <img src="https://img.icons8.com/fluent/50/000000/github.png"/>
+                            <h3>Git & Github</h3>
+                        </div>                 
                     </div>
                     <div 
                     data-aos="fade-up"
                     data-aos-duration="600"
                     class="path"
-                >
-
+                    >
+                        <div class="path-icon">
+                            <img src="https://img.icons8.com/ios-filled/48/000000/elephant.png"/>
+                            <h3>Hadood & Big Data</h3>
+                        </div>
                     </div>
                     <div 
                     data-aos="fade-up"
                     data-aos-duration="600"
                     class="path"
-                >
-
+                    >
+                        <div class="path-icon">
+                            <img src="https://img.icons8.com/ios-glyphs/64/000000/combo-chart.png"/>
+                            <h3>Statistics</h3>
+                        </div>
                     </div>
                 </div>
             </div>
