--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li>Home</li>
                 <li>Learn</li>
                 <li>A.D.S.A</li>
-                <li>Bootcamp</li>
+                <li><a href="/pages/bootcamp.html">Bootcamp</a></li>
                 <li>Community</li>
             </ul>
         </nav>
