--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A.D.S.A</title>
+    <link rel="shortcut icon" href="../assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/@imports/header.css">
     <link rel="stylesheet" href="./styles/mentors.css">
     <link rel="stylesheet" href="../styles/@imports/footer.css">
@@ -15,7 +16,7 @@
         </h1>
         <input type="checkbox" id="menu-trigger">
         <nav class="menu" id='menu'>
-            <ul>
+            <ul id="nav_items">
                 <li><a href="/index.html">Home</a></li>
                 <li>Learn</li>
                 <li>A.D.S.A</li>
@@ -28,8 +29,50 @@
         </label>
     </header>
     <!-- MAIN -->
-    <section class="landing">
-
+    <section id="landing"></section>
+    <section id="mentors">
+        <h1>Mentors</h1>
+        <div>
+            <div class="image" style="background-image: url('../assets/mentors/8b15413c-94c5-482c-893a-dd8640a210cc.png');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/ashley-graham-woty.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/istockphoto-685132245-612x612.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/person-before.8b4df4ab.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/send-money-in-person-from-jamaica-resp.webp');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/smiling-young-african-american-man-glasses-smiling-confident-smiling-young-african-american-man-glasses-smiling-178593539.jpg');"></div>
+        </div>
+    </section>
+    <section id="educators">
+        <h1>Educators</h1>
+        <div>
+            <div class="image" style="background-image: url('../assets/mentors/8b15413c-94c5-482c-893a-dd8640a210cc.png');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/ashley-graham-woty.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/istockphoto-685132245-612x612.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/person-before.8b4df4ab.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/send-money-in-person-from-jamaica-resp.webp');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/smiling-young-african-american-man-glasses-smiling-confident-smiling-young-african-american-man-glasses-smiling-178593539.jpg');"></div>
+        </div>
+    </section>
+    <section id="technicians">
+        <h1>Technicians</h1>
+        <div>
+            <div class="image" style="background-image: url('../assets/mentors/8b15413c-94c5-482c-893a-dd8640a210cc.png');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/ashley-graham-woty.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/istockphoto-685132245-612x612.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/person-before.8b4df4ab.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/send-money-in-person-from-jamaica-resp.webp');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/smiling-young-african-american-man-glasses-smiling-confident-smiling-young-african-american-man-glasses-smiling-178593539.jpg');"></div>
+        </div>
+    </section>
+    <section id="sponsors">
+        <h1>Our Sponsors</h1>
+        <div>
+            <div class="image" style="background-image: url('../assets/mentors/8b15413c-94c5-482c-893a-dd8640a210cc.png');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/ashley-graham-woty.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/istockphoto-685132245-612x612.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/person-before.8b4df4ab.jpg');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/send-money-in-person-from-jamaica-resp.webp');"></div>
+            <div class="image" style="background-image: url('../assets/mentors/smiling-young-african-american-man-glasses-smiling-confident-smiling-young-african-american-man-glasses-smiling-178593539.jpg');"></div>
+        </div>
     </section>
 
     
@@ -72,6 +115,6 @@
             Copyright &copy2020 <a href="#">Data Science East Africa</a>
         </p>
     </footer>
-    
+    <script src="../js/nav.js"></script>
 </body>
 </html>
