--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -20,8 +20,8 @@
                 <li><a href="/index.html">Home</a></li>
                 <li>Learn</li>
                 <li>A.D.S.A</li>
-                <li>Bootcamp</li>
-                <li>Community</li>
+                <li><a href="./bootcamp.html">Bootcamp</a></li>
+                <li><a href="./mentors.html">Community</a></li>
             </ul>
         </nav>
         <label for="menu-trigger" class="menu-trigger-label">
