--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <input type="checkbox" id="menu-trigger">
         <nav class="menu" id='menu'>
             <ul>
-                <li>Home</li>
+                <li><a href="/index.html">Home</a></li>
                 <li>Learn</li>
                 <li>A.D.S.A</li>
                 <li><a href="/pages/bootcamp.html">Bootcamp</a></li>
-                <li>Community</li>
+                <li><a href="/pages/mentors.html">Community</a></li>
             </ul>
         </nav>
         <label for="menu-trigger" class="menu-trigger-label">
