--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     >
                         <div class="path-icon">
                             <img src="https://img.icons8.com/ios-filled/48/000000/elephant.png"/>
-                            <h3>Hadood & Big Data</h3>
+                            <h3>Hadoop & Big Data</h3>
                         </div>
                     </div>
                     <div 
