--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="../styles/@imports/footer.css">
 </head>
 <body>
-    <header>
-        <h1>
+    <header style="padding: 0 1.2rem;background-color: #fff;">
+        <h1 style="color: #e6d604;">
             DSEA BootCamp
         </h1>
         <input type="checkbox" id="menu-trigger">
         <nav class="menu" id='menu'>
             <ul id="nav_items">
-                <li><a href="/index.html">Home</a></li>
-                <li>Learn</li>
-                <li>A.D.S.A</li>
-                <li><a href="./bootcamp.html">Bootcamp</a></li>
-                <li><a href="./mentors.html">Community</a></li>
+                <li><a id="link" href="/index.html">Home</a></li>
+                <li><a id="link" href="#">Learn</a></li>
+                <li><a id="link" href="#">A.D.S.A</a></li>
+                <li><a id="link" href="./bootcamp.html">Bootcamp</a></li>
+                <li><a id="link" href="./mentors.html">Community</a></li>
             </ul>
         </nav>
         <label for="menu-trigger" class="menu-trigger-label">
@@ -29,7 +29,18 @@
         </label>
     </header>
     <!-- MAIN -->
-    <section id="landing"></section>
+    <section id="landing" style="background-color: #fff;">
+        <article id="intro">
+            <h1>
+                Small Change,<br/>
+                Big Impact.
+            </h1>
+            <p>
+                Put your life to a new level.
+            </p>
+            <button>Get Started</button>
+        </article>
+    </section>
     <section id="mentors">
         <h1>Mentors</h1>
         <div>
