--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -42,15 +42,40 @@
         </article>
     </section>
     <section id="mentors">
-        <h1>Mentors</h1>
-        <div>
-            <div class="image" style="background-image: url('../assets/mentors/8b15413c-94c5-482c-893a-dd8640a210cc.png');"></div>
-            <div class="image" style="background-image: url('../assets/mentors/ashley-graham-woty.jpg');"></div>
-            <div class="image" style="background-image: url('../assets/mentors/istockphoto-685132245-612x612.jpg');"></div>
-            <div class="image" style="background-image: url('../assets/mentors/person-before.8b4df4ab.jpg');"></div>
-            <div class="image" style="background-image: url('../assets/mentors/send-money-in-person-from-jamaica-resp.webp');"></div>
-            <div class="image" style="background-image: url('../assets/mentors/smiling-young-african-american-man-glasses-smiling-confident-smiling-young-african-american-man-glasses-smiling-178593539.jpg');"></div>
-        </div>
+        <aside class="mtext">
+            
+        </aside>
+        <aside class="mpics">
+            <div class="mentor">
+                <div class="image" style="background-image: url('../assets/mentors/8b15413c-94c5-482c-893a-dd8640a210cc.png');"></div>
+                <p>John Njenga</p>
+                <article>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum modi facilis voluptas quaerat libero nesciunt minima iste nisi dignissimos.
+                </article>
+            </div>
+            <div class="mentor">
+                <div class="image" style="background-image: url('../assets/mentors/ashley-graham-woty.jpg');"></div>
+                <p>Christine Musyoki</p>
+                <article>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum modi facilis voluptas quaerat libero nesciunt minima iste nisi dignissimos.
+                </article>
+            </div>
+            <div class="mentor">
+                <div class="image" style="background-image: url('../assets/mentors/person-before.8b4df4ab.jpg');"></div>
+                <p>David Schwimmer</p>
+                <article>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum modi facilis voluptas quaerat libero nesciunt minima iste nisi dignissimos.
+                </article>
+            </div>
+            <div class="mentor">
+                <div class="image" style="background-image: url('../assets/mentors/smiling-young-african-american-man-glasses-smiling-confident-smiling-young-african-american-man-glasses-smiling-178593539.jpg');"></div>
+                <p>Eliud Kipang'</p>
+                <article>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum modi facilis voluptas quaerat libero nesciunt minima iste nisi dignissimos.
+                </article>
+            </div>
+            
+        </aside>
     </section>
     <section id="educators">
         <h1>Educators</h1>
