--- a/pages/bootcamp.html
+++ b/pages/bootcamp.html
@@ -17,12 +17,11 @@
         </h1>
         <input type="checkbox" id="menu-trigger">
         <nav class="menu" id='menu'>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li>Learn</li>
-                <li>A.D.S.A</li>
-                <li><a href="./bootcamp.html">Bootcamp</a></li>
-                <li><a href="./mentors.html">Community</a></li>
+            <ul id="nav_items">
+                <li><a id="link" href="/index.html">Home</a></li>
+                <li><a id="link" href="./bootcamp.html">Learn</a></li>
+                <li><a id="link" href="#">A.D.S.A</a></li>
+                <li><a id="link" href="./mentors.html">Community</a></li>
             </ul>
         </nav>
         <label for="menu-trigger" class="menu-trigger-label">
