--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -21,7 +21,7 @@
             <ul id="nav_items">
                 <li><a id="link" href="/index.html">Home</a></li>
                 <li><a id="link" href="./bootcamp.html">Learn</a></li>
-                <li><a id="link" href="#">A.D.S.A</a></li>
+                <li><a id="link" href="#">CDA</a></li>
                 <li><a id="link" href="./mentors.html">Community</a></li>
             </ul>
         </nav>
