--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul id="nav_items">
                 <li><a id="link" href="index.html">Home</a></li>
                 <li><a id="link" href="./pages/bootcamp.html">Learn</a></li>
-                <li><a id="link" href="#">A.D.S.A</a></li>
+                <li><a id="link" href="#">CDA</a></li>
                 <li><a id="link" href="./pages/mentors.html">Community</a></li>
             </ul>
         </nav>
