--- a/pages/bootcamp.html
+++ b/pages/bootcamp.html
@@ -186,6 +186,81 @@
         </ul>
         <button>Enroll now</button>
     </section>
+    <section id="learning-paths">
+        <div class="title">
+            <img src="/assets/icons8-graph-report-64.png" alt="learning path"/>
+            <h1>Learning Paths</h1>
+        </div>
+        <div id="path-container">
+            <div id="card">
+                <div id="bg" style="background: url('/assets/preview.jpg') no-repeat;background-size: cover; background-position: center;"></div>
+                <div class="instructor">
+                    <img src="/assets/mentors/ashley-graham-woty.jpg" alt="instructor">
+                    <p>Name</p>
+                </div>
+                <div class="unit-title">
+                    <p>Asdf</p>
+                </div>
+                <div class="bottom">
+                    <p>Level</p>
+                    <button>
+                        Get Started
+                    </button>
+                </div>
+            </div>
+
+            <div id="card">
+                <div id="bg" style="background: url('/assets/machine-learning-artificial-intelligence-ai-deep-learning-blockchain-neural-network-illustration_126608-35.jpg') no-repeat;background-size: cover; background-position: center;"></div>
+                <div class="instructor">
+                    <img src="/assets/mentors/ashley-graham-woty.jpg" alt="instructor">
+                    <p>Name</p>
+                </div>
+                <div class="unit-title">
+                    <p>Asdf</p>
+                </div>
+                <div class="bottom">
+                    <p>Level</p>
+                    <button>
+                        Get Started
+                    </button>
+                </div>
+            </div>
+
+            <div id="card">
+                <div id="bg" style="background: url('/assets/Machine-Learning-Libraries-Outside-Blog.jpg') no-repeat;background-size: cover; background-position: center;"></div>
+                <div class="instructor">
+                    <img src="/assets/mentors/ashley-graham-woty.jpg" alt="instructor">
+                    <p>Name</p>
+                </div>
+                <div class="unit-title">
+                    <p>Asdf</p>
+                </div>
+                <div class="bottom">
+                    <p>Level</p>
+                    <button>
+                        Get Started
+                    </button>
+                </div>
+            </div>
+
+            <div id="card">
+                <div id="bg" style="background: url('/assets/Get-Certified-with-Free-Courses-in-Data-Science-and-Machine-Learning.jpg') no-repeat;background-size: cover; background-position: center;"></div>
+                <div class="instructor">
+                    <img src="/assets/mentors/ashley-graham-woty.jpg" alt="instructor">
+                    <p>Name</p>
+                </div>
+                <div class="unit-title">
+                    <p>Asdf</p>
+                </div>
+                <div class="bottom">
+                    <p>Level</p>
+                    <button>
+                        Get Started
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="projects">
         <h2
         data-aos="fade-up"
