--- a/pages/bootcamp.html
+++ b/pages/bootcamp.html
@@ -199,7 +199,7 @@
                     <p>Name</p>
                 </div>
                 <div class="unit-title">
-                    <p>Asdf</p>
+                    <p>Data Science Course</p>
                 </div>
                 <div class="bottom">
                     <p>Level</p>
@@ -216,7 +216,7 @@
                     <p>Name</p>
                 </div>
                 <div class="unit-title">
-                    <p>Asdf</p>
+                    <p>Machine Learning with Python</p>
                 </div>
                 <div class="bottom">
                     <p>Level</p>
@@ -233,7 +233,7 @@
                     <p>Name</p>
                 </div>
                 <div class="unit-title">
-                    <p>Asdf</p>
+                    <p>Machine Learning with Javascript</p>
                 </div>
                 <div class="bottom">
                     <p>Level</p>
@@ -250,7 +250,7 @@
                     <p>Name</p>
                 </div>
                 <div class="unit-title">
-                    <p>Asdf</p>
+                    <p>Machine Learning with C++</p>
                 </div>
                 <div class="bottom">
                     <p>Level</p>
