--- a/pages/bootcamp.html
+++ b/pages/bootcamp.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>
-            DSEA BootCamp
+            DSEA
         </h1>
         <input type="checkbox" id="menu-trigger">
         <nav class="menu" id='menu'>
