--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -14,7 +14,7 @@
 <body>
     <header style="padding: 0 1.2rem;background-color: #fff;z-index: 999999;">
         <h1 style="color: #e6d604;">
-            DSEA BootCamp
+            DSEA Community
         </h1>
         <input type="checkbox" id="menu-trigger">
         <nav class="menu" id='menu'>
