--- a/pages/learn.html
+++ b/pages/learn.html
@@ -10,7 +10,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>DSEA</h1>
+    </header>
     <main>
 
         <section id="learning-paths">
