--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="menu" id='menu'>
             <ul id="nav_items">
                 <li><a id="link" href="index.html">Home</a></li>
-                <li><a id="link" href="./pages/bootcamp.html">Learn</a></li>
+                <li><a id="link" href="./pages/learn.html">Learn</a></li>
                 <li><a id="link" href="#">CDA</a></li>
                 <li><a id="link" href="./pages/mentors.html">Community</a></li>
             </ul>
