--- a/pages/mentors.html
+++ b/pages/mentors.html
@@ -20,7 +20,7 @@
         <nav class="menu" id='menu'>
             <ul id="nav_items">
                 <li><a id="link" href="/index.html">Home</a></li>
-                <li><a id="link" href="./bootcamp.html">Learn</a></li>
+                <li><a id="link" href="./learn.html">Learn</a></li>
                 <li><a id="link" href="#">CDA</a></li>
                 <li><a id="link" href="./mentors.html">Community</a></li>
             </ul>
