--- a/pages/cda.html
+++ b/pages/cda.html
@@ -22,6 +22,11 @@
                 <li><a id="link" href="./bootcamp.html">Learn</a></li>
                 <li><a id="link" href="./cda.html">CDA</a></li>
                 <li><a id="link" href="./mentors.html">Community</a></li>
+                <li id="register">
+                    <a href="#">
+                        Register
+                    </a>
+                </li>
             </ul>
         </nav>
         <label for="menu-trigger" class="menu-trigger-label">
@@ -67,6 +72,23 @@
                 </p>
                 <button>
                     Exam Structure
+                </button>
+            </article>
+        </section>
+
+        <section id="d">
+            <div id="title">
+                <h1>Become an CDS™</h1>
+            </div>
+            <article>
+                <h4>
+                    REGISTRATION FOR THE CDS EXAM IS NOW OPEN
+                </h4>
+                <p>
+                    Take the first step towards earning your certification today.
+                </p>
+                <button>
+                    REGISTER NOW
                 </button>
             </article>
         </section>
